src/index.css
html {
    height: 100%;
}

body {
    height: 100%;
    margin: 0;
    padding: 0;
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active  {
    box-shadow: 0 0 0 30px white inset !important;
    -webkit-box-shadow: 0 0 0 30px white inset !important;
}

/* MainPage */
.MainPage {
    width: 100vw;
    height: 100vh;
}

.PageHeader {
    width: 100%;
    height: 10%;
    background-color: #7550AB;
}

.HeaderLogo {
    height: 100%;
}

.HeaderName {
    height: 100%;
}

.PageBody {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 90%;
}

.Board {
    display: grid;
    justify-content: space-evenly;
    align-content: space-evenly;
    grid-template-columns: auto auto auto auto;
    grid-row-gap: 10px;
    grid-column-gap: 10px;
    width: 80%;
    border: 1px solid black;
}

.ColumnWrapper {
    border: 1px solid black;
}

.ColumnTitle {
    margin-left: 10px;
}

.Column {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    height: 500px;
    width: 250px;
    margin: 10px;
    border: 1px solid black;
}

.Card {
    margin: 10px;
    padding: 5px;
    cursor: move;
    cursor: grab;
    cursor: -moz-grab;
    cursor: -webkit-grab;
    border: 1px solid black;
}

.Card:active {
    cursor: grabbing;
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing;
    user-select: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.Sidebar {
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 1px solid black;
    width: 20%;
}

.SearchBar {
    width: 100%;
    font-size: 22px;
    padding: 12px;
    border: none;
    border-bottom: 1px solid black;
    background-color: white;
    font-family: "Montserrat";
}

.SearchBody {
    height: 100%;
}

.YearPicker {
    z-index: 2;
    position: fixed;
    top: 50%;
    left: 50%;
    margin-left: -250px;
    margin-top: -100px;
    border: 1px solid black;
}

.YearDropdownWrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
}

/* Creds */
.AuthPage {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    background-color: #7550AB;
}

.LoginLogo {
    height: 300px;
    width: 300px;
    margin-bottom: 40px;
    margin-top: -200px;
}

.AuthWrapper {
    margin-top: -25px;
    margin-bottom: 20px;
    border-radius: 15px;
    background-color: white;
}

.AuthHeaderText {
    color: #7550AB;
    font-size: 22pt;
    margin-top: 30px;
    margin-bottom: 28px;
    text-align: center;
    font-family: "Montserrat";
}

.AuthForm {
    width: 350px;
    height: 100%;
    margin-bottom: 20px;
    margin-right: 32px;
    margin-left: 32px;
    text-align: center;
}

.AuthTextField {
    width: 90%;
    padding: 12px;
    margin-bottom: 8px;
    font-size: 16px;
    border-radius: 5px;
    background-color: white;
    font-family: "Montserrat";
}

.SubmitButton {
    width: 100%;
    padding: 12px;
    margin-top: 8px;
    border-radius: 8px;
    font-size: 16px;
    color: white;
    background-color: #7550AB;
    cursor: pointer;
    cursor: -moz-pointer;
    cursor: -webkit-pointer;
    font-family: "Montserrat";
}

.NavText {
    color: white;
    text-decoration: underline;
    cursor: pointer;
    cursor: -moz-pointer;
    cursor: -webkit-pointer;
    font-family: "Montserrat";
}

.ErrorText {
    color: red;
    font-family: "Montserrat";
    margin: 3px;
}

